# pg-entity

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  cabal.project  environment.sh  flake.nix  fourmolu.yaml  index.html  pg-entity.cabal  shell.nix  sitemap.xml
.github/workflows/: ci.yml  cpus.sh  deploy-docs.yml  linting.yml  setup_ci_env.sh  shell.nix
Guides/: index.html
Tutorial/: index.html
docs/: README.md  book.toml  mkdocs.yml
docs/.markdown/: SUMMARY.md
docs/src/: ErrorsGuide.hs  Guides.md  Introduction.hs  Introduction.md  Main.hs  Tutorial.hs  Tutorial.md  index.md
example/: README.md  cabal.project  entity-processing.cabal
example/app/: Main.hs
example/migrations/: add_e.sql
example/src/Processing/: Entity.hs
scripts/: run-tests.sh
search/: search_index.json
src/Database/PostgreSQL/: Entity.hs
src/Database/PostgreSQL/Entity/: BlogPost.hs  DBT.hs  Internal.hs  QQ.hs  Types.hs
src/Database/PostgreSQL/Entity/DBT/: Types.hs
src/Database/PostgreSQL/Entity/Internal/: BlogPost.hs  QQ.hs  TH.hs  Unsafe.hs
src/Database/PostgreSQL/Entity/Types/: Unsafe.hs
test/: BlogPost.hs  EntitySpec.hs  GenericsSpec.hs  Main.hs  Utils.hs
test/migrations/: 20210228194538_blogpost.sql
